# glcp-common-automation-libs

./: .gitignore  README.md  build.sh  publish.sh  setup.py
automation_libs/: pyproject.toml
automation_libs/hpe_glcp_automation_lib/libs/abridge/app_api/: abridge_app_api.py
automation_libs/hpe_glcp_automation_lib/libs/abridge/helpers/: abridge_device_helper.py  abridge_payload_constants.py
automation_libs/hpe_glcp_automation_lib/libs/acct_mgmt/: utils.py
automation_libs/hpe_glcp_automation_lib/libs/acct_mgmt/app_api/: acct_mgmt_app_api.py
automation_libs/hpe_glcp_automation_lib/libs/acct_mgmt/helpers/: acct_mgmt_payload_constants.py  ui_am_create_new_user_new_acct_setup.py
automation_libs/hpe_glcp_automation_lib/libs/acct_mgmt/service_centric_ui/: account_type_page.py  locators.py
automation_libs/hpe_glcp_automation_lib/libs/acct_mgmt/ui/: account_type_page.py  api_page.py  check_eligibility_page.py  choose_account_page.py  create_account_page.py  create_user_data.py  create_user_page.py  customer_account_page.py  customer_details_page.py  ip_access_rules_page.py  locators.py  manage_mfa_page.py  order_history_page.py  switch_account_page.py  usage_reporting_page.py  user_preferences_page.py  user_profile_page.py  workspace_details_page.py
automation_libs/hpe_glcp_automation_lib/libs/acct_mgmt/user_api/: acct_mgmt_user_api.py
automation_libs/hpe_glcp_automation_lib/libs/add/device_calls/: add_payload_constant.py  cloud_activation_key_helper.py  device_prov.py
automation_libs/hpe_glcp_automation_lib/libs/gldp/: api_utils.py  sdk_common_utils.py
(+242 files in other folders)
