[tool.poetry]
name = "hpe-glcp-automation-lib"
version = "2.1.0"
description = "HPE GLCP Automation Library "
authors = ["HPE GLCP QA Team"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
allure-pytest = "^2.9.45"
allure-python-commons = "^2.8.22"
requests = "^2.24.0"
boto3 = "^1.16.5"
lxml = "^4.6.1"
urllib3 = "^1.26.7"
bs4 = "^0.0.1"
pyotp = "^2.6.0"
jira = "^2.0.0"
humiolib = "^0.2.4"
launchdarkly-server-sdk = "^8.1.1"
pytest-check = "^1.0.1"
cloudevents = "^1.2.0"
aiohttp = "^3.6.2"
asyncio = "^3.4.3"
pexpect = "4.8.0"
paramiko = "^3.2.0"
python-jose = "^3.3.0"

[[tool.poetry.source]]
name = "jfrog"
url = "https://aruba.jfrog.io/aruba/api/pypi/pypi-local/simple/"
secondary = true

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
flake8 = "3.9.2"
black = "23.1.0"
isort = "5.11.5"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 90

[tool.black]
line-length = 90

[build-system]
requires = ["poetry>=1.4.2"]
build-backend = "poetry.masonry.api"
